scores were missing key_passes

--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -275,16 +275,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Harry Kane\tscore:478.000000\n",
-      "name: Romelu Lukaku\tscore:464.000000\n",
-      "name: Christian Benteke\tscore:369.500000\n",
-      "name: Sergio Agüero\tscore:368.500000\n",
-      "name: Diego Da Silva Costa\tscore:343.000000\n",
-      "name: Zlatan Ibrahimovic\tscore:330.500000\n",
-      "name: Jamie Vardy\tscore:283.500000\n",
-      "name: Fernando Llorente\tscore:281.000000\n",
-      "name: Sam Vokes\tscore:267.500000\n",
-      "name: Álvaro Negredo\tscore:261.000000\n"
+      "name: Harry Kane\tscore:560.000000\n",
+      "name: Romelu Lukaku\tscore:558.000000\n",
+      "name: Christian Benteke\tscore:433.500000\n",
+      "name: Sergio Agüero\tscore:430.500000\n",
+      "name: Diego Da Silva Costa\tscore:427.000000\n",
+      "name: Zlatan Ibrahimovic\tscore:426.500000\n",
+      "name: Jamie Vardy\tscore:345.500000\n",
+      "name: Fernando Llorente\tscore:333.000000\n",
+      "name: Troy Deeney\tscore:329.000000\n",
+      "name: Álvaro Negredo\tscore:313.000000\n"
      ]
     }
    ],
