data looks good

--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -244,16 +244,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Alexis Sánchez\tscore:522.000000\n",
-      "name: Eden Hazard\tscore:457.500000\n",
-      "name: Gylfi Sigurdsson\tscore:440.500000\n",
-      "name: Christian Eriksen\tscore:431.500000\n",
-      "name: Kevin De Bruyne\tscore:410.000000\n",
-      "name: Philippe Coutinho\tscore:377.500000\n",
-      "name: Wilfried Zaha\tscore:369.500000\n",
-      "name: Joshua King\tscore:358.000000\n",
-      "name: James Milner\tscore:357.500000\n",
-      "name: Michail Antonio\tscore:321.500000\n"
+      "name: Alexis Sánchez\tscore:678.000000\n",
+      "name: Christian Eriksen\tscore:655.500000\n",
+      "name: Eden Hazard\tscore:633.500000\n",
+      "name: Kevin De Bruyne\tscore:616.000000\n",
+      "name: Gylfi Sigurdsson\tscore:600.500000\n",
+      "name: Philippe Coutinho\tscore:507.500000\n",
+      "name: Mesut Özil\tscore:495.500000\n",
+      "name: Roberto Firmino\tscore:471.500000\n",
+      "name: James Milner\tscore:469.500000\n",
+      "name: Wilfried Zaha\tscore:447.500000\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
