--- a/ML.ipynb
+++ b/ML.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -39,94 +39,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Harry Kane' '14.0']\n",
-      " ['Romelu Lukaku' '94.5']\n",
-      " ['Christian Benteke' '1.0']\n",
-      " ['Sergio Agüero' '25.5']\n",
-      " ['Diego Da Silva Costa' '12.5']\n",
-      " ['Zlatan Ibrahimovic' '47.0']\n",
-      " ['Jamie Vardy' '2.5']\n",
-      " ['Fernando Llorente' '13.5']\n",
-      " ['Sam Vokes' '6.5']\n",
-      " ['Álvaro Negredo' '12.0']\n",
-      " ['Troy Deeney' '3.5']\n",
-      " ['Jermain Defoe' '35.0']\n",
-      " ['Olivier Giroud' '23.0']\n",
-      " ['Salomón Rondón' '2.0']\n",
-      " ['Peter Crouch' '34.0']\n",
-      " ['Islam Slimani' '0.5']\n",
-      " ['Marcus Rashford' '0.5']\n",
-      " ['Wayne Rooney' '0.5']\n",
-      " ['Divock Origi' '0.5']\n",
-      " ['Benik Afobe' '2.5']\n",
-      " ['Andre Gray' '2.0']\n",
-      " ['Ashley Barnes' '28.0']\n",
-      " ['Mame Biram Diouf' '7.0']\n",
-      " ['Abel Hernández' '0.0']\n",
-      " ['Daniel Sturridge' '1.0']\n",
-      " ['Enner Valencia' '2.0']\n",
-      " ['Gabriel Fernando de Jesus' '2.0']\n",
-      " ['Shane Long' '11.0']\n",
-      " ['Andy Carroll' '2.5']\n",
-      " ['Cristhian Stuani' '0.5']\n",
-      " ['Charlie Austin' '3.0']\n",
-      " ['Fabio Borini' '0.0']\n",
-      " ['Stefano Okaka' '1.0']\n",
-      " ['Callum Wilson' '2.5']\n",
-      " ['Shinji Okazaki' '11.5']\n",
-      " ['Vincent Janssen' '7.5']\n",
-      " ['Adama Diomande' '4.5']\n",
-      " ['Manolo Gabbiadini' '0.5']\n",
-      " ['Kelechi Iheanacho' '5.5']\n",
-      " ['Michy Batshuayi' '0.5']\n",
-      " ['Ahmed Musa' '4.5']\n",
-      " [\"M'Baye Niang\" '3.0']\n",
-      " ['Hal Robson-Kanu' '17.0']\n",
-      " ['Danny Welbeck' '0']\n",
-      " ['Jordan Ayew' '3']\n",
-      " ['Victor Anichebe' '1']\n",
-      " ['Oumar Niasse' '5']\n",
-      " ['Borja Bastón' '6']\n",
-      " ['Connor Wickham' '0']\n",
-      " ['Wilfried Bony' '0']\n",
-      " ['Lucas Pérez' '3']\n",
-      " ['Odion Ighalo' '0']\n",
-      " ['Dieumerci Mbokani' '3']\n",
-      " ['Fraizer Campbell' '0']\n",
-      " ['Leonardo Ulloa' '0']\n",
-      " ['Modou Barrow' '0']\n",
-      " ['Diafra Sakho' '0']\n",
-      " ['Jonathan Calleri' '3']\n",
-      " ['Lewis Grabban' '0']\n",
-      " ['Patrick Bamford' '0']\n",
-      " ['Dominic Calvert-Lewin' '0']\n",
-      " ['Mauro Zárate' '9']\n",
-      " ['Lys Mousset' '0']\n",
-      " ['Saido Berahino' '3']\n",
-      " ['Ashley Fletcher' '0']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(file, \"r\") as infile:\n",
     "        data = json.load(infile)\n",
     "\n",
     "points_above = np.array([(x[\"name\"], x[\"points_above_replacement\"]) for x in data[:-1]])\n",
-    "print(points_above)\n"
+    "#print(points_above)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
