--- a/Advanced Stats.ipynb
+++ b/Advanced Stats.ipynb
@@ -323,25 +323,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'element_type': 4, 'goals_scored': 29, 'bps': 920, 'dreamteam_count': 9, 'penalties_saved': 0, 'code': 78830, 'creativity': '548.4', 'points_per_game': '7.5', 'threat': '1530.0', 'selected_by_percent': '23.3', 'cost_change_start': 9, 'second_name': 'Kane', 'now_cost': 119, 'penalties_missed': 1, 'web_name': 'Kane', 'status': 'a', 'squad_number': 10, 'clean_sheets': 14, 'transfers_in': 2534008, 'red_cards': 0, 'total_points': 224, 'bonus': 33, 'id': 403, 'value_season': '18.8', 'in_dreamteam': True, 'name': 'Harry Kane', 'transfers_out': 2241049, 'yellow_cards': 3, 'first_name': 'Harry', 'minutes': 2523, 'saves': 0, 'team': 17, 'goals_conceded': 19, 'ep_this': '1.5', 'ea_index': 1053, 'special': False, 'influence': '1279.0', 'assists': 7, 'ep_next': '9.9', 'history': {'2016/17': {'clearance_total_score': 0.0, 'accurateCrosses_total': 5.0, 'apps': 30, 'dispossessed_total_score': -24.0, 'dispossessed_total': 48.0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 261, 'aerialWon_total': 46.0, 'dribbleWonPerGame': 1.2666666666666666, 'dispossessedPerGame': 1.6, 'togga_score': 478.0, 'clearance_total': 21.0, 'key_passes_score': 0, 'clean_sheets': 14, 'ontarget_scoring_att_score': 116.0, 'own_goals_score': 0, 'tackle_total': 22.0, 'red_cards': 0, 'penalties_saved_score': 0, 'successful_dribbles_score': 38.0, 'yellow_cards': 3, 'minutes': 2523, 'goals_conceded_score': 0, 'successful_dribbles': 38.0, 'minsPlayed': 2536, 'saves_score': 0, 'assists': 7, 'own_goals': 0, 'goals_scored': 29, 'key_passes': 41.0, 'red_cards_score': 0, 'interception_total_score': 4.0, 'total_pass': 597.0, 'aerialWon_total_score': 23.0, 'tackle_total_score': 22.0, 'yellow_cards_score': -9, 'goals_conceded': 19, 'start_cost': 110, 'assists_score': 42, 'end_cost': 119, 'saves': 0, 'interception_total': 4.0, 'accurateCrosses_total_score': 5.0, 'keyPassPerGame': 1.3666666666666667, 'ontarget_scoring_att': 58.0}, '2012/13': {'clearance_total_score': 0, 'goals_scored': 0, 'interception_total_score': 0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 0, 'tackle_total_score': 0, 'end_cost': 43, 'yellow_cards_score': 0, 'togga_score': 0, 'key_passes_score': 0, 'red_cards_score': 0, 'clean_sheets': 0, 'ontarget_scoring_att_score': 0, 'own_goals_score': 0, 'goals_conceded': 4, 'red_cards': 0, 'assists': 0, 'penalties_saved_score': 0, 'successful_dribbles_score': 0, 'assists_score': 0, 'dispossessed_total_score': 0, 'yellow_cards': 0, 'minutes': 141, 'saves': 0, 'goals_conceded_score': 0, 'accurateCrosses_total_score': 0, 'aerialWon_total_score': 0, 'saves_score': 0, 'start_cost': 45, 'own_goals': 0}, '2015/16': {'clearance_total_score': 0.0, 'accurateCrosses_total': 4.0, 'apps': 38, 'dispossessed_total_score': -46.0, 'dispossessed_total': 92.0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 225, 'aerialWon_total': 76.0, 'dispossessedPerGame': 2.4210526315789473, 'togga_score': 463.0, 'clearance_total': 31.0, 'key_passes_score': 0, 'clean_sheets': 14, 'ontarget_scoring_att_score': 150.0, 'own_goals_score': -9, 'tackle_total': 29.0, 'red_cards': 0, 'penalties_saved_score': 0, 'successful_dribbles_score': 48.0, 'yellow_cards': 5, 'minutes': 3363, 'goals_conceded_score': 0, 'red_cards_score': 0, 'successful_dribbles': 48.0, 'minsPlayed': 3370, 'saves_score': 0, 'assists': 3, 'own_goals': 1, 'goals_scored': 25, 'key_passes': 44.0, 'dribbleWonPerGame': 1.263157894736842, 'interception_total_score': 21.000000000000004, 'aerialWon_total_score': 38.0, 'tackle_total_score': 29.0, 'yellow_cards_score': -15, 'goals_conceded': 33, 'start_cost': 95, 'assists_score': 18, 'end_cost': 102, 'saves': 0, 'interception_total': 21.000000000000004, 'accurateCrosses_total_score': 4.0, 'keyPassPerGame': 1.1578947368421053, 'ontarget_scoring_att': 75.0}, '2011/12': {'clearance_total_score': 0, 'dispossessed_total_score': 0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 0, 'threat': '0.0', 'togga_score': 0, 'yellow_cards_score': 0, 'key_passes_score': 0, 'clean_sheets': 0, 'ontarget_scoring_att_score': 0, 'own_goals_score': 0, 'red_cards': 0, 'creativity': '0.0', 'penalties_saved_score': 0, 'successful_dribbles_score': 0, 'season_name': '2011/12', 'yellow_cards': 0, 'minutes': 0, 'goals_conceded_score': 0, 'total_points': 0, 'ea_index': 0, 'aerialWon_total_score': 0, 'season': 6, 'saves_score': 0, 'assists': 0, 'bps': 0, 'ict_index': '0.0', 'own_goals': 0, 'goals_scored': 0, 'interception_total_score': 0, 'keyPass_total_score': 0, 'bonus': 0, 'tackle_total_score': 0, 'penalties_missed': 0, 'influence': '0.0', 'red_cards_score': 0, 'element_code': 78830, 'goals_conceded': 0, 'start_cost': 50, 'assists_score': 0, 'end_cost': 50, 'saves': 0, 'accurateCrosses_total_score': 0, 'id': 3972}, '2013/14': {'goals_scored': 3, 'clearance_total_score': 0, 'interception_total_score': 0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 27, 'tackle_total_score': 0, 'end_cost': 44, 'yellow_cards_score': 0, 'togga_score': 42.0, 'key_passes_score': 0, 'red_cards_score': 0, 'clean_sheets': 2, 'ontarget_scoring_att_score': 24.0, 'own_goals_score': -9, 'goals_conceded': 6, 'red_cards': 0, 'assists': 0, 'penalties_saved_score': 0, 'successful_dribbles_score': 0, 'assists_score': 0, 'dispossessed_total_score': 0, 'yellow_cards': 0, 'minutes': 500, 'saves': 0, 'goals_conceded_score': 0, 'accurateCrosses_total_score': 0, 'aerialWon_total_score': 0, 'saves_score': 0, 'start_cost': 45, 'ontarget_scoring_att': 12.0, 'own_goals': 1}, '2014/15': {'clearance_total_score': 0.0, 'accurateCrosses_total': 8.0, 'apps': 34, 'dispossessed_total_score': -48.0, 'dispossessed_total': 96.0, 'penalties_saved': 0, 'clean_sheets_score': 0, 'goals_scored_score': 189, 'aerialWon_total': 51.0, 'dispossessedPerGame': 2.823529411764706, 'togga_score': 391.5, 'clearance_total': 21.0, 'key_passes_score': 0, 'clean_sheets': 6, 'ontarget_scoring_att_score': 94.0, 'own_goals_score': -9, 'tackle_total': 35.0, 'red_cards': 0, 'penalties_saved_score': 0, 'successful_dribbles_score': 50.0, 'yellow_cards': 4, 'minutes': 2581, 'goals_conceded_score': 0, 'red_cards_score': 0, 'successful_dribbles': 50.0, 'minsPlayed': 2582, 'saves_score': 0, 'assists': 7, 'own_goals': 1, 'goals_scored': 21, 'key_passes': 27.0, 'dribbleWonPerGame': 1.4705882352941178, 'interception_total_score': 17.0, 'aerialWon_total_score': 25.5, 'tackle_total_score': 35.0, 'yellow_cards_score': -12, 'goals_conceded': 39, 'start_cost': 50, 'assists_score': 42, 'end_cost': 60, 'saves': 0, 'interception_total': 17.0, 'accurateCrosses_total_score': 8.0, 'keyPassPerGame': 0.7941176470588235, 'ontarget_scoring_att': 47.0}}, 'ict_index': '336.0', 'own_goals': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data[\"elements\"][402])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -405,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -440,14 +421,19 @@
     "                if by_name is not None:\n",
     "                    index = by_name[0]\n",
     "                    hits += 1\n",
-    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat] \n",
+    "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][\"age\"] = stat_data[\"playerTableStats\"][index][\"age\"]\n",
     "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
     "                elif by_web is not None:\n",
     "                    index = by_web[0]\n",
     "                    hits += 1\n",
     "                    player[\"history\"][year][stat] = stat_data[\"playerTableStats\"][index][stat]\n",
+    "                    player[\"history\"][year][\"age\"] = stat_data[\"playerTableStats\"][index][\"age\"]\n",
     "                    player[\"history\"][year][stat[:-7]+\"_total\"] = stat_data[\"playerTableStats\"][index][stat]*stat_data[\"playerTableStats\"][index][\"apps\"]\n",
-    "                else: misses+=1\n",
+    "                else: \n",
+    "                    misses+=1\n",
+    "                    player[\"history\"][year][\"age\"] = None\n",
+    "                \n",
     "print(hits)\n",
     "print(misses)"
    ]
@@ -661,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
