--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
     "            new_stats={}\n",
     "            for stat in player['history'][year]:\n",
     "                if stat in togga_scoring or stat in ['togga_score', 'apps', 'start_cost', 'end_cost', \n",
-    "                                                    'total_pass', 'minutes'] or stat in [x+\"_total\" for x in togga_scoring]:\n",
+    "                                                    'total_pass', 'minutes', 'age'] or stat in [x+\"_total\" for x in togga_scoring]:\n",
     "                    new_stats.update({stat: player['history'][year][stat]})  \n",
     "            bpcopy[position][i]['history'].update({year:new_stats.copy()})\n",
     "                \n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -182,16 +182,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "name: Tom Heaton\tscore:283.500000\n",
+      "name: Tom Heaton\tscore:301.500000\n",
+      "name: Hugo Lloris\tscore:255.000000\n",
       "name: Petr Cech\tscore:250.500000\n",
-      "name: Hugo Lloris\tscore:243.000000\n",
-      "name: Jordan Pickford\tscore:224.750000\n",
+      "name: Jordan Pickford\tscore:248.750000\n",
       "name: Thibaut Courtois\tscore:219.750000\n",
       "name: Kasper Schmeichel\tscore:216.000000\n",
-      "name: Artur Boruc\tscore:204.250000\n",
+      "name: Artur Boruc\tscore:210.250000\n",
       "name: Lee Grant\tscore:201.500000\n",
       "name: David de Gea\tscore:199.750000\n",
-      "name: Heurelho Gomes\tscore:188.250000\n"
+      "name: Ben Foster\tscore:197.750000\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
