--- a/ML.ipynb
+++ b/ML.ipynb
@@ -63,21 +63,21 @@
     "relevant_forward_keys = ['togga_score', 'apps', 'tackle_total', 'yellow_cards', 'dispossessed_total', 'red_cards', \n",
     "                         'minutes', 'successful_dribbles', 'own_goals', 'ontarget_scoring_att', 'interception_total', \n",
     "                         'goals_scored', 'key_passes', 'accurateCrosses_total', 'aerialWon_total', 'assists', \n",
-    "                         'points_above_replacement', 'name']\n",
+    "                         'points_above_replacement', 'name', 'age']\n",
     "\n",
     "relevant_midfield_keys = ['togga_score', 'apps', 'tackle_total', 'yellow_cards', 'dispossessed_total', 'red_cards', \n",
     "                          'minutes', 'successful_dribbles', 'own_goals', 'ontarget_scoring_att', 'interception_total', \n",
     "                          'goals_scored', 'key_passes', 'accurateCrosses_total', 'clean_sheets', 'aerialWon_total', \n",
-    "                          'assists', 'points_above_replacement', 'name']\n",
+    "                          'assists', 'points_above_replacement', 'name', 'age']\n",
     "\n",
     "relevant_defense_keys = ['goals_conceded', 'togga_score', 'apps', 'tackle_total', 'yellow_cards', 'dispossessed_total',\n",
     "                         'red_cards', 'minutes', 'successful_dribbles', 'own_goals', 'ontarget_scoring_att', 'name'\n",
     "                         'interception_total', 'goals_scored', 'key_passes', 'accurateCrosses_total', 'clean_sheets', \n",
-    "                         'aerialWon_total', 'assists', 'points_above_replacement', 'clearance_total']\n",
+    "                         'aerialWon_total', 'assists', 'points_above_replacement', 'clearance_total', 'age']\n",
     "\n",
     "relevant_goalie_keys = ['goals_conceded', 'saves', 'togga_score', 'apps', 'tackle_total', 'yellow_cards', 'red_cards', \n",
     "                        'minutes', 'own_goals', 'interception_total', 'key_passes', 'clean_sheets', 'aerialWon_total', \n",
-    "                        'penalties_saved', 'points_above_replacement', 'name', 'clearance_total']\n",
+    "                        'penalties_saved', 'points_above_replacement', 'name', 'clearance_total', 'age']\n",
     "\n",
     "def removeExtraStats(file, relevant_keys):\n",
     "    with open(file, \"r\") as infile:\n",
