integrated shots on target

--- a/cleanup_json.ipynb
+++ b/cleanup_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -69,12 +69,15 @@
     "        new = {season_name:y}\n",
     "        element['history']['history_past'].update(new.copy()) \n",
     "        \n",
-    "data[\"elements\"][96][\"web_name\"] = \"Diego Costa\"\n"
+    "data[\"elements\"][96][\"web_name\"] = \"Diego Costa\"\n",
+    "\n",
+    "for player in data[\"elements\"]: \n",
+    "    player[\"history\"] = player[\"history\"][\"history_past\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
