linearregression is garbage. Trying to get other models to work

--- a/Calculate scores.ipynb
+++ b/Calculate scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -73,12 +73,17 @@
     "        player['history'].update({'2013/14': {\"togga_score\":0}})\n",
     "    if not (player[\"history\"].get(\"2012/13\")):\n",
     "        player['history'].update({'2012/13': {\"togga_score\":0}})\n",
+    "    player['history']['2012/13']['next_year'] =  player['history']['2013/14']['togga_score']\n",
+    "    player['history']['2013/14']['next_year'] =  player['history']['2014/15']['togga_score']\n",
+    "    player['history']['2014/15']['next_year'] =  player['history']['2015/16']['togga_score']\n",
+    "    player['history']['2015/16']['next_year'] =  player['history']['2016/17']['togga_score']\n",
+    "    \n",
     "    by_position[player[\"element_type\"]].append(player)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -102,8 +107,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fill in SOG for players with missing info"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random_sog = {2:2, 3:4, 4:7}\n",
+    "for i in random_sog:\n",
+    "    for player in by_position[i]:\n",
+    "        if not player.get(\"ontarget_scoring_att\"):\n",
+    "            player[\"ontarget_scoring_att\"] = random.randint(0,random_sog[i])\n",
+    "with open('Data/positional.json', 'w') as json_data:\n",
+    "    json.dump(data, json_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -113,10 +143,11 @@
     "for position in by_position:\n",
     "    for i, player in enumerate(by_position[position]):\n",
     "        for year in ['2016/17', '2015/16', '2014/15', '2013/14', '2012/13']:\n",
+    "            player[\"history\"][year][\"name\"] = player[\"name\"]\n",
     "            new_stats={}\n",
     "            for stat in player['history'][year]:\n",
-    "                if stat in togga_scoring or stat in ['togga_score', 'apps', 'start_cost', 'end_cost', \n",
-    "                                                    'total_pass', 'minutes', 'age'] or stat in [x+\"_total\" for x in togga_scoring]:\n",
+    "                if stat in togga_scoring or stat in ['togga_score', 'apps', 'start_cost', 'end_cost', 'name', \n",
+    "                                                    'total_pass', 'minutes', 'age', 'next_year'] or stat in [x+\"_total\" for x in togga_scoring]:\n",
     "                    new_stats.update({stat: player['history'][year][stat]})  \n",
     "            bpcopy[position][i]['history'].update({year:new_stats.copy()})\n",
     "                \n",
@@ -161,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
