--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -60,7 +60,6 @@
    },
    "outputs": [],
    "source": [
-    "# Removed ontarget_scoring_att\n",
     "relevant_forward_keys = ['togga_score', 'apps', 'tackle_total', 'yellow_cards', 'dispossessed_total', 'red_cards', \n",
     "                         'minutes', 'successful_dribbles', 'own_goals', 'interception_total', \n",
     "                         'goals_scored', 'key_passes', 'accurateCrosses_total', 'aerialWon_total', 'assists', \n",
@@ -380,16 +379,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "214.53169281535588\n"
+     "ename": "NameError",
+     "evalue": "name 'DecisionTreeRegressor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-385f95085084>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mregressor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDecisionTreeRegressor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_depth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0my_prediction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregressor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#y_prediction\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#X_train.head()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'DecisionTreeRegressor' is not defined"
      ]
     }
    ],
@@ -400,7 +403,7 @@
     "#y_prediction\n",
     "#X_train.head()\n",
     "\n",
-    "RMSE = sqrt(mean_squared_error(y_true = y_test, y_pred = y_prediction))\n",
+    "RMSE = sqrt(mean_squared_error(y_true = Y_test, y_pred = y_prediction))\n",
     "print(RMSE)"
    ]
   },
@@ -478,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 332,
    "metadata": {
     "collapsed": false
    },
@@ -487,9 +490,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR: 0.490000 (0.185023)\n",
-      "LDA: 0.546667 (0.178388)\n",
-      "KNN: 0.306667 (0.210185)\n"
+      "LR: 0.580000 (0.196751)\n",
+      "LDA: 0.563333 (0.164958)\n"
      ]
     },
     {
@@ -522,9 +524,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CART: 0.680000 (0.214580)\n",
-      "NB: 0.546667 (0.178388)\n",
-      "SVM: 0.410000 (0.220126)\n"
+      "KNN: 0.423333 (0.198914)\n",
+      "CART: 0.610000 (0.235726)\n",
+      "NB: 0.580000 (0.196751)\n",
+      "SVM: 0.200000 (0.124722)\n"
      ]
     }
    ],
@@ -535,16 +538,12 @@
     "        ratio = row['togga_score'] / row['next_year']\n",
     "        if  ratio < 0.5:\n",
     "            val = 0\n",
-    "        elif ratio < 0.8:\n",
-    "            val = 1\n",
     "        elif ratio < 1.0:\n",
-    "            val = 2\n",
-    "        elif ratio < 1.2:\n",
-    "            val = 3\n",
+    "            val = 1\n",
     "        elif ratio < 1.5:\n",
-    "            val = 4\n",
+    "            val = 2\n",
     "        else:\n",
-    "            val = 5\n",
+    "            val = 3\n",
     "        #print(ratio,val)\n",
     "    else:\n",
     "        #row[x_keys] = 0\n",
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 333,
    "metadata": {
     "collapsed": true
    },
@@ -663,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 334,
    "metadata": {
     "collapsed": false
    },
@@ -673,54 +672,50 @@
      "output_type": "stream",
      "text": [
       "0.6\n",
-      "[[1 0 0 0 0]\n",
-      " [0 2 0 0 0]\n",
-      " [0 0 1 0 0]\n",
-      " [0 1 0 0 1]\n",
-      " [1 0 2 1 5]]\n",
+      "[[1 1 1]\n",
+      " [1 1 1]\n",
+      " [1 1 7]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          1       0.50      1.00      0.67         1\n",
-      "          2       0.67      1.00      0.80         2\n",
-      "          3       0.33      1.00      0.50         1\n",
-      "          4       0.00      0.00      0.00         2\n",
-      "          5       0.83      0.56      0.67         9\n",
+      "          1       0.33      0.33      0.33         3\n",
+      "          2       0.33      0.33      0.33         3\n",
+      "          3       0.78      0.78      0.78         9\n",
       "\n",
-      "avg / total       0.64      0.60      0.58        15\n",
+      "avg / total       0.60      0.60      0.60        15\n",
       "\n",
-      "Olivier Giroud 5\n",
-      "Callum Wilson 5\n",
-      "Benik Afobe 5\n",
-      "Sam Vokes 4\n",
-      "Andre Gray 5\n",
-      "Ashley Barnes 5\n",
-      "Michy Batshuayi 5\n",
+      "Olivier Giroud 3\n",
+      "Callum Wilson 3\n",
+      "Benik Afobe 3\n",
+      "Sam Vokes 3\n",
+      "Andre Gray 3\n",
+      "Ashley Barnes 3\n",
+      "Michy Batshuayi 3\n",
       "Diego Da Silva Costa 2\n",
-      "Romelu Lukaku 2\n",
-      "Abel Hernández 5\n",
-      "Jamie Vardy 1\n",
-      "Shinji Okazaki 5\n",
+      "Romelu Lukaku 1\n",
+      "Abel Hernández 3\n",
+      "Jamie Vardy 2\n",
+      "Shinji Okazaki 2\n",
       "Christian Benteke 2\n",
-      "Daniel Sturridge 5\n",
-      "Divock Origi 4\n",
-      "Sergio Agüero 5\n",
-      "Wayne Rooney 5\n",
+      "Daniel Sturridge 3\n",
+      "Divock Origi 3\n",
+      "Sergio Agüero 1\n",
+      "Wayne Rooney 1\n",
       "Marcus Rashford 1\n",
-      "Zlatan Ibrahimovic 3\n",
-      "Cristhian Stuani 5\n",
-      "Shane Long 5\n",
-      "Peter Crouch 3\n",
-      "Fabio Borini 5\n",
-      "Jermain Defoe 3\n",
+      "Zlatan Ibrahimovic 1\n",
+      "Cristhian Stuani 3\n",
+      "Shane Long 3\n",
+      "Peter Crouch 2\n",
+      "Fabio Borini 3\n",
+      "Jermain Defoe 2\n",
       "Harry Kane 1\n",
-      "Vincent Janssen 5\n",
-      "Troy Deeney 5\n",
-      "Salomón Rondón 5\n",
-      "Enner Valencia 5\n",
-      "Álvaro Negredo 5\n",
-      "Fernando Llorente 5\n",
-      "Stefano Okaka 5\n",
-      "Islam Slimani 5\n"
+      "Vincent Janssen 3\n",
+      "Troy Deeney 1\n",
+      "Salomón Rondón 3\n",
+      "Enner Valencia 3\n",
+      "Álvaro Negredo 2\n",
+      "Fernando Llorente 2\n",
+      "Stefano Okaka 3\n",
+      "Islam Slimani 3\n"
      ]
     }
    ],
@@ -737,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 335,
    "metadata": {
     "collapsed": false
    },
@@ -746,69 +741,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.466666666667\n",
-      "[[0 0 0 0 1]\n",
-      " [1 1 0 0 0]\n",
-      " [0 0 1 0 0]\n",
-      " [1 1 0 0 0]\n",
-      " [3 0 1 0 5]]\n",
+      "0.4\n",
+      "[[3 0 0]\n",
+      " [1 0 2]\n",
+      " [5 1 3]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          1       0.00      0.00      0.00         1\n",
-      "          2       0.50      0.50      0.50         2\n",
-      "          3       0.50      1.00      0.67         1\n",
-      "          4       0.00      0.00      0.00         2\n",
-      "          5       0.83      0.56      0.67         9\n",
+      "          1       0.33      1.00      0.50         3\n",
+      "          2       0.00      0.00      0.00         3\n",
+      "          3       0.60      0.33      0.43         9\n",
       "\n",
-      "avg / total       0.60      0.47      0.51        15\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Noah\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1074: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Olivier Giroud 5\n",
-      "Callum Wilson 5\n",
-      "Benik Afobe 3\n",
+      "avg / total       0.43      0.40      0.36        15\n",
+      "\n",
+      "Olivier Giroud 3\n",
+      "Callum Wilson 3\n",
+      "Benik Afobe 2\n",
       "Sam Vokes 3\n",
-      "Andre Gray 5\n",
-      "Ashley Barnes 5\n",
-      "Michy Batshuayi 5\n",
-      "Diego Da Silva Costa 2\n",
-      "Romelu Lukaku 2\n",
+      "Andre Gray 2\n",
+      "Ashley Barnes 3\n",
+      "Michy Batshuayi 3\n",
+      "Diego Da Silva Costa 1\n",
+      "Romelu Lukaku 1\n",
       "Abel Hernández 3\n",
-      "Jamie Vardy 5\n",
-      "Shinji Okazaki 5\n",
-      "Christian Benteke 4\n",
-      "Daniel Sturridge 5\n",
+      "Jamie Vardy 3\n",
+      "Shinji Okazaki 3\n",
+      "Christian Benteke 2\n",
+      "Daniel Sturridge 2\n",
       "Divock Origi 2\n",
-      "Sergio Agüero 4\n",
-      "Wayne Rooney 5\n",
-      "Marcus Rashford 2\n",
-      "Zlatan Ibrahimovic 5\n",
-      "Cristhian Stuani 5\n",
-      "Shane Long 3\n",
-      "Peter Crouch 3\n",
-      "Fabio Borini 5\n",
-      "Jermain Defoe 5\n",
+      "Sergio Agüero 1\n",
+      "Wayne Rooney 3\n",
+      "Marcus Rashford 3\n",
+      "Zlatan Ibrahimovic 2\n",
+      "Cristhian Stuani 3\n",
+      "Shane Long 2\n",
+      "Peter Crouch 2\n",
+      "Fabio Borini 3\n",
+      "Jermain Defoe 3\n",
       "Harry Kane 1\n",
       "Vincent Janssen 1\n",
-      "Troy Deeney 4\n",
-      "Salomón Rondón 2\n",
-      "Enner Valencia 5\n",
-      "Álvaro Negredo 5\n",
-      "Fernando Llorente 5\n",
-      "Stefano Okaka 4\n",
-      "Islam Slimani 5\n"
+      "Troy Deeney 2\n",
+      "Salomón Rondón 1\n",
+      "Enner Valencia 3\n",
+      "Álvaro Negredo 3\n",
+      "Fernando Llorente 3\n",
+      "Stefano Okaka 2\n",
+      "Islam Slimani 2\n"
      ]
     }
    ],
@@ -818,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 336,
    "metadata": {
     "collapsed": false
    },
@@ -827,60 +804,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.733333333333\n",
-      "[[1 0 0 0 0]\n",
-      " [0 2 0 0 0]\n",
-      " [0 0 1 0 0]\n",
-      " [0 0 0 1 1]\n",
-      " [3 0 0 0 6]]\n",
+      "0.6\n",
+      "[[3 0 0]\n",
+      " [0 2 1]\n",
+      " [3 2 4]]\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          1       0.25      1.00      0.40         1\n",
-      "          2       1.00      1.00      1.00         2\n",
-      "          3       1.00      1.00      1.00         1\n",
-      "          4       1.00      0.50      0.67         2\n",
-      "          5       0.86      0.67      0.75         9\n",
+      "          1       0.50      1.00      0.67         3\n",
+      "          2       0.50      0.67      0.57         3\n",
+      "          3       0.80      0.44      0.57         9\n",
       "\n",
-      "avg / total       0.86      0.73      0.77        15\n",
+      "avg / total       0.68      0.60      0.59        15\n",
       "\n",
-      "Olivier Giroud 5\n",
-      "Callum Wilson 5\n",
-      "Benik Afobe 5\n",
-      "Sam Vokes 5\n",
-      "Andre Gray 5\n",
-      "Ashley Barnes 4\n",
-      "Michy Batshuayi 5\n",
+      "Olivier Giroud 3\n",
+      "Callum Wilson 3\n",
+      "Benik Afobe 3\n",
+      "Sam Vokes 2\n",
+      "Andre Gray 3\n",
+      "Ashley Barnes 3\n",
+      "Michy Batshuayi 3\n",
       "Diego Da Silva Costa 1\n",
-      "Romelu Lukaku 2\n",
-      "Abel Hernández 5\n",
-      "Jamie Vardy 5\n",
-      "Shinji Okazaki 5\n",
-      "Christian Benteke 4\n",
-      "Daniel Sturridge 5\n",
-      "Divock Origi 5\n",
+      "Romelu Lukaku 1\n",
+      "Abel Hernández 3\n",
+      "Jamie Vardy 2\n",
+      "Shinji Okazaki 3\n",
+      "Christian Benteke 2\n",
+      "Daniel Sturridge 3\n",
+      "Divock Origi 3\n",
       "Sergio Agüero 1\n",
       "Wayne Rooney 1\n",
-      "Marcus Rashford 5\n",
-      "Zlatan Ibrahimovic 1\n",
-      "Cristhian Stuani 5\n",
-      "Shane Long 5\n",
-      "Peter Crouch 3\n",
-      "Fabio Borini 5\n",
-      "Jermain Defoe 5\n",
+      "Marcus Rashford 3\n",
+      "Zlatan Ibrahimovic 2\n",
+      "Cristhian Stuani 3\n",
+      "Shane Long 3\n",
+      "Peter Crouch 2\n",
+      "Fabio Borini 3\n",
+      "Jermain Defoe 2\n",
       "Harry Kane 1\n",
-      "Vincent Janssen 5\n",
+      "Vincent Janssen 3\n",
       "Troy Deeney 1\n",
-      "Salomón Rondón 5\n",
-      "Enner Valencia 5\n",
-      "Álvaro Negredo 5\n",
-      "Fernando Llorente 4\n",
-      "Stefano Okaka 5\n",
-      "Islam Slimani 5\n"
+      "Salomón Rondón 3\n",
+      "Enner Valencia 3\n",
+      "Álvaro Negredo 3\n",
+      "Fernando Llorente 2\n",
+      "Stefano Okaka 3\n",
+      "Islam Slimani 3\n"
      ]
     }
    ],
    "source": [
     "makePredictions(GaussianNB())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thoughts: \n",
+    "    Players who will do worse:\n",
+    "        Kane\n",
+    "        Aguero\n",
+    "        Costa\n",
+    "        Deeney\n",
+    "        Lukaku?"
    ]
   },
   {
